--- a/Monikers.ipynb
+++ b/Monikers.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -126,7 +126,7 @@
               "9     Jeffrey Dahmer             "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -334,35 +334,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Added yet: the word yet is a word that ca...\n",
-            "Added shoot your shot: spit game....\n",
-            "Added pisser: some where to go for a piss at...\n",
-            "Added sobres: spanish word used in slang for...\n",
-            "Added Tumblr: worlds first digital insane as...\n",
-            "Added City Museum:  louis, missouri, opened in 19...\n",
-            "Added otl: acronym standing for one true ...\n",
-            "Found a good pattern in the title: rhabdophobia\n"
+            "success\n"
           ]
         },
         {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_36554/2001054441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;31m# check if any element in the list is True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcheck_for_badwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdefinition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbad_patterns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m       \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcheck_for_badwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbad_patterns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# check if the phrase or definition contains any buzzwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0;31m# include the element in the dictionary if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m       definition = remove_undesireable_sentences(\n",
-            "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_36554/1211054009.py\u001b[0m in \u001b[0;36mcheck_for_badwords\u001b[0;34m(definition, bad_patterns)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPorterStemmer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mstemmer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPorterStemmer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mstemmed_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstemmer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbad_patterns\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstemmer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0;31m# only include the stemmed words which begin with the same letter as the original word (this is to avoid adding words that are not related to the original word)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mstemmed_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstemmed_words\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_36554/1211054009.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPorterStemmer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mstemmer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPorterStemmer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mstemmed_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstemmer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbad_patterns\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstemmer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0;31m# only include the stemmed words which begin with the same letter as the original word (this is to avoid adding words that are not related to the original word)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mstemmed_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstemmed_words\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/.local/lib/python3.9/site-packages/nltk/stem/porter.py\u001b[0m in \u001b[0;36mstem\u001b[0;34m(self, word, to_lowercase)\u001b[0m\n\u001b[1;32m    661\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpool\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    662\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 663\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mORIGINAL_ALGORITHM\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    664\u001b[0m             \u001b[0;31m# With this line, strings of length 1 or 2 don't go through\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    665\u001b[0m             \u001b[0;31m# the stemming process, although no mention is made of this\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 6/6 [00:00<00:00, 4819.19it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "success\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 7/7 [00:00<00:00, 13567.53it/s]\n"
           ]
         }
       ],
@@ -372,23 +372,40 @@
         "# upvotes: number of upvotes on Urban Dictionary,\n",
         "# downvotes: number of downvotes on Urban Dictionary\n",
         "import time\n",
+        "from ratelimit import limits, sleep_and_retry\n",
+        "from tqdm import tqdm\n",
+        "# import RateLimitException from UrbanDictionary\n",
+        "\n",
         "wikitest = False # set to true to test the wikipedia page length\n",
         "# include a phrase if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
         "rand_dict = {}\n",
         "total_votes_thresh = 200 # min number of upvotes + downvotes\n",
         "upvotes_thresh = 100 # min number of upvotes\n",
         "downvotes_thresh = 10 # max number of downvotes\n",
-        "desired_number_of_cards = 50\n",
+        "desired_number_of_cards = 5\n",
         "rands = [] # the randoms\n",
         "\n",
-        "while len(rand_dict) < desired_number_of_cards:\n",
-        "  time.sleep(1)\n",
+        "@limits(calls=1, period=10) # limit the number of calls to 1 per ten seconds\n",
+        "def rate_limited_retrieval():\n",
+        "  # create a list of words that are not allowed in the definitions of the cards\n",
         "  rand = ud.random() # returns a list of 5 random phrases and definitions from Urban Dictionary\n",
+        "  return rand\n",
+        "\n",
+        "while len(rand_dict) < desired_number_of_cards:\n",
+        "  # get a list of 5 random phrases and definitions from Urban Dictionary\n",
+        "  try:\n",
+        "    rand = rate_limited_retrieval() # returns a list of 5 random phrases and definitions from Urban Dictionary\n",
+        "    print('success')\n",
+        "  except Exception as e:\n",
+        "    #*print('Rate limit exceeded or this error: {}. \\nWaiting 10 seconds...'.format(e))\n",
+        "    time.sleep(10)\n",
+        "    continue\n",
+        "  #*print(f'Got {len(rand)} random phrases from Urban Dictionary')\n",
         "  # append these to a master list\n",
         "  rands.extend(rand) # rands is a list of all the random phrases and definitions from Urban Dictionary\n",
         "\n",
         "  # iterate over the elements in the rand object\n",
-        "  for element in rand:\n",
+        "  for element in tqdm(rand):\n",
         "    # extract the relevant data from the element\n",
         "    phrase = element.word\n",
         "    definition = element.definition\n",
@@ -402,15 +419,21 @@
         "    \n",
         "\n",
         "    # check if any element in the list is True\n",
-        "    if any(values) and not check_for_badwords(definition, bad_patterns) \\\n",
-        "      and not check_for_badwords(phrase, bad_patterns): # check if the phrase or definition contains any buzzwords\n",
-        "    # include the element in the dictionary if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
-        "      definition = remove_undesireable_sentences(\n",
-        "        definition, phrase, bad_patterns) # remove sentences that contain buzzwords, are not in English, etc.\n",
+        "    if any(values) and not check_for_badwords(definition, bad_patterns) and not check_for_badwords(phrase, bad_patterns): # check if the phrase or definition contains any buzzwords\n",
+        "      # include the element in the dictionary if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
+        "      definition = remove_undesireable_sentences(definition, phrase, bad_patterns) # remove sentences that contain buzzwords, are not in English, etc.\n",
         "      definition = unpack_definitions(definition) # remove brackets and clean up the definitions with regex\n",
         "\n",
         "      print(f'Added {phrase}: {definition[0:30]}...')\n",
-        "      rand_dict[phrase] = definition\n",
+        "      rand_dict[phrase] = definition\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "# save the cards to a csv file\n",
         "import pandas as pd\n",
