--- a/Monikers.ipynb
+++ b/Monikers.ipynb
@@ -423,33 +423,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Connor: up(1) down(1) +++  Added to dictionary\n",
-            "orbax: up(7) down(2) +++  Added to dictionary\n",
-            "Ture: up(5) down(0) +++  Added to dictionary\n",
-            "Jimmy Iovine: up(34) down(20) +++  Added to dictionary\n",
-            "klondike: up(7) down(30) +++  Added to dictionary\n",
-            "Captain hook dick: up(5) down(0) +++  Added to dictionary\n",
-            "P-DEW: up(4) down(2) +++  Added to dictionary\n",
-            "frisco: up(535) down(552) +++  Added to dictionary\n",
-            "Infinite Amogus Theory: up(3) down(0) +++  Added to dictionary\n",
-            "Cametra: up(3) down(1) +++  Added to dictionary\n",
-            "phnoogin: up(56) down(0) +++  Added to dictionary\n",
-            "Unicode relationship: up(3) down(1) +++  Added to dictionary\n",
-            "edgepage: up(1) down(0) +++  Added to dictionary\n",
-            "casuangle: up(1) down(0) +++  Added to dictionary\n",
-            "Kedibone: up(1) down(0) +++  Added to dictionary\n",
-            "Laia: up(239) down(14) +++  Added to dictionary\n",
-            "Mustang 5.0: up(125) down(106) +++  Added to dictionary\n",
-            "piojos: up(65) down(10) +++  Added to dictionary\n",
-            "POMC: up(102) down(9) +++  Added to dictionary\n",
-            "splindickerous: up(1) down(0) +++  Added to dictionary\n"
+            "view: up(58) down(35) +++  Added to dictionary\n",
+            "SWAX: up(4) down(8) +++  Added to dictionary\n",
+            "penis pilgrim: up(5) down(1) +++  Added to dictionary\n",
+            "Gelfmania: up(5) down(0) +++  Added to dictionary\n",
+            "CMB: up(20) down(47) +++  Added to dictionary\n",
+            "Glumagen: up(2) down(0) +++  Added to dictionary\n",
+            "Armchair english teacher: up(1) down(1) +++  Added to dictionary\n",
+            "Loserville: up(58) down(20) +++  Added to dictionary\n",
+            "Cuban Sunrise: up(20) down(13) +++  Added to dictionary\n",
+            "Young bahhs: up(2) down(1) +++  Added to dictionary\n",
+            "2tooty2: up(2) down(1) +++  Added to dictionary\n",
+            "Béla: up(114) down(44) +++  Added to dictionary\n",
+            "HYBB: up(7) down(15) +++  Added to dictionary\n",
+            "hot 20: up(7) down(0) +++  Added to dictionary\n",
+            "Pluralis: up(1) down(1) +++  Added to dictionary\n",
+            "urp: up(9) down(31) +++  Added to dictionary\n",
+            "forbidden definitions: up(3) down(3) +++  Added to dictionary\n",
+            "*#$!@#\n",
+            "Rick'd up: up(1) down(1) +++  Added to dictionary\n",
+            "Handle: up(60) down(57) +++  Added to dictionary\n",
+            "Shot up doubles: up(1) down(0) +++  Added to dictionary\n",
+            "Connor: up(7) down(36) +++  Added to dictionary\n",
+            "Millions Knives: up(8) down(9) +++  Added to dictionary\n",
+            "roflstick: up(2) down(3) +++  Added to dictionary\n",
+            "Slow Turtle: up(15) down(0) +++  Added to dictionary\n",
+            "Browzy: up(6) down(1) +++  Added to dictionary\n",
+            "Toss the tit: up(1) down(0) +++  Added to dictionary\n",
+            "Flap Jacks: up(10) down(7) +++  Added to dictionary\n",
+            "man stealer: up(41) down(4) +++  Added to dictionary\n",
+            "Twin Bush: up(1) down(2) +++  Added to dictionary\n",
+            "Poo Pillow: up(16) down(1) +++  Added to dictionary\n",
+            "asshole academy: up(24) down(2) +++  Added to dictionary\n",
+            "Snatch smasher: up(1) down(0) +++  Added to dictionary\n",
+            "jenking: up(37) down(29) +++  Added to dictionary\n",
+            "chessed: up(37) down(8) +++  Added to dictionary\n",
+            "Patrycja: up(5) down(37) +++  Added to dictionary\n",
+            "National Poop Pic Day: up(4) down(0) +++  Added to dictionary\n",
+            "jeff bettencourt: up(3) down(2) +++  Added to dictionary\n",
+            "gubbala: up(1) down(0) +++  Added to dictionary\n",
+            "tornadian: up(18) down(0) +++  Added to dictionary\n",
+            "Rudabega Bean Dip: up(4) down(0) +++  Added to dictionary\n",
+            "Unwomanplayafiedism: up(1) down(7) +++  Added to dictionary\n",
+            "Grisdale: up(3) down(0) +++  Added to dictionary\n",
+            "Siyah: up(6) down(2) +++  Added to dictionary\n",
+            "Clit Tac: up(5) down(0) +++  Added to dictionary\n",
+            "Tongsta: up(7) down(4) +++  Added to dictionary\n",
+            "naggin-bottle: up(18) down(7) +++  Added to dictionary\n",
+            "TEU POWER PLAY: up(16) down(1) +++  Added to dictionary\n",
+            "Cat: up(2) down(1) +++  Added to dictionary\n",
+            "Tj: up(4) down(6) +++  Added to dictionary\n",
+            "lashayuh: up(1) down(0) +++  Added to dictionary\n",
+            "Splick Spling: up(3) down(0) +++  Added to dictionary\n",
+            "Heebing: up(2) down(0) +++  Added to dictionary\n",
+            "Number of phrases in the dictionary: 52\n"
           ]
         }
       ],
@@ -467,8 +501,8 @@
         "wikitest = False # set to true to test the wikipedia page length\n",
         "# include a phrase if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
         "rand_dict = {}\n",
-        "total_votes_thresh = 20 # min number of upvotes + downvotes\n",
-        "upvotes_thresh = 20 # min number of upvotes\n",
+        "total_votes_thresh = 200 # min number of upvotes + downvotes\n",
+        "upvotes_thresh = 100 # min number of upvotes\n",
         "downvotes_thresh = total_votes_thresh//4 # maximum number of downvotes\n",
         "desired_number_of_cards = 50\n",
         "rands = [] # the randoms\n",
@@ -498,7 +532,7 @@
         "    phrase = element.word\n",
         "    # check for any blacklist word in phrase.lower() and if so, skip\n",
         "    if any(word in phrase.lower() for word in blacklist):\n",
-        "      print('*#$!@#')\n",
+        "      print(phrase, ' *#$!@#')\n",
         "      continue\n",
         "    definition = element.definition\n",
         "    usage_example = element.example\n",
@@ -523,13 +557,13 @@
         "    #*print(f'{phrase}: {definition}...')\n",
         "    #^ Phase 2 (filtering)\n",
         "    # check if any element in the list is True\n",
-        "    # if any(values) and not check_for_badwords(definition, bad_patterns) and not check_for_badwords(phrase, bad_patterns): # check if the phrase or definition contains any buzzwords\n",
-        "    #   # include the element in the dictionary if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
-        "    #   definition = remove_undesireable_sentences(definition, phrase, bad_patterns) # remove sentences that contain buzzwords, are not in English, etc.\n",
-        "    #   definition = unpack_definitions(phrase,definition) # remove brackets and clean up the definitions with regex\n",
+        "    if any(values) and not check_for_badwords(definition, bad_patterns) and not check_for_badwords(phrase, bad_patterns): # check if the phrase or definition contains any buzzwords\n",
+        "      # include the element in the dictionary if it has a combined total of at least 100 upvotes and downvotes on Urban Dictionary\n",
+        "      definition = remove_undesireable_sentences(definition, phrase, bad_patterns) # remove sentences that contain buzzwords, are not in English, etc.\n",
+        "      definition = unpack_definitions(phrase,definition) # remove brackets and clean up the definitions with regex\n",
         "\n",
-        "    #   print(f'Added {phrase}: {definition}...')\n",
-        "    #   rand_dict[phrase] = definition\n",
+        "      print(f'-- Added {phrase}: {definition}...')\n",
+        "      rand_dict[phrase] = definition\n",
         "\n",
         "\n",
         "# print the number of phrases in the dictionary\n",
