--- a/wiki_monikers.ipynb
+++ b/wiki_monikers.ipynb
@@ -732,6 +732,45 @@
     "with open('ppn_deck.json', 'w') as outfile:\n",
     "    json.dump(card_deck, outfile, indent=4)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = ''\n",
+    "\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(13, \"celebrities\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(14, \"politicians\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(15, \"sportspeople\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(16, \"famous paintings\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(17, \"historical events\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(18, \"famous quotes\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(19, \"famous poems\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(20, \"memes\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(21, \"hashtags\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(22, \"United States Presidents\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(23, \"United States Vice Presidents\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(24, \"United States Senators\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(25, \"World Leaders\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(26, \"World War II Leaders\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(27, \"World War I Leaders\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(28, \"Viral Videos\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(29, \"Viral Songs\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(30, \"Viral Memes\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(31, \"Viral Hashtags\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(32, \"Terrible People\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(33, \"Terrible Events\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(34, \"Acronyms\")\n",
+    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(35, \"United States Cities\")\n",
+    "\n",
+    "\n",
+    "match = re.search(r'&category\\d+={{urllib\\.parse\\.quote\\(\\'(.*?)\\'\\)}}', URL)\n",
+    "if match:\n",
+    "    category = match.group(1)\n",
+    "    print(category)  # Output: \"celebrities\""
+   ]
   }
  ],
  "metadata": {
