wikipedia_only: Updated

--- a/wiki_monikers.ipynb
+++ b/wiki_monikers.ipynb
@@ -735,41 +735,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<word> <word> sometimes also called Volxmusik or Tradimix; English for New folk music describes the crossover mix of traditional German folk music <word> with newer genres such as jazz, contemporary folk, electronic music, and/or rock.\n"
+     ]
+    }
+   ],
    "source": [
-    "URL = ''\n",
+    "import nltk\n",
     "\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(13, \"celebrities\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(14, \"politicians\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(15, \"sportspeople\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(16, \"famous paintings\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(17, \"historical events\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(18, \"famous quotes\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(19, \"famous poems\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(20, \"memes\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(21, \"hashtags\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(22, \"United States Presidents\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(23, \"United States Vice Presidents\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(24, \"United States Senators\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(25, \"World Leaders\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(26, \"World War II Leaders\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(27, \"World War I Leaders\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(28, \"Viral Videos\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(29, \"Viral Songs\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(30, \"Viral Memes\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(31, \"Viral Hashtags\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(32, \"Terrible People\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(33, \"Terrible Events\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(34, \"Acronyms\")\n",
-    "URL += \"&category{}={{urllib.parse.quote('{}')}}\".format(35, \"United States Cities\")\n",
+    "deck = [{\n",
+    "        \"title\": \"Neue Volksmusik\",\n",
+    "        \"summary\": [\n",
+    "            \"Neue Volksmusik\",\n",
+    "            \"Neue Volksmusik sometimes also called Volxmusik or Tradimix; English for New folk music describes the crossover mix of traditional German folk music Volksmusik with newer genres such as jazz, contemporary folk, electronic music, and/or rock.\"\n",
+    "        ],\n",
+    "        \"related\": 23\n",
+    "    }]\n",
     "\n",
+    "card = deck[0]\n",
+    "title = card[\"title\"]\n",
+    "summary = card[\"summary\"][1]\n",
     "\n",
-    "match = re.search(r'&category\\d+={{urllib\\.parse\\.quote\\(\\'(.*?)\\'\\)}}', URL)\n",
-    "if match:\n",
-    "    category = match.group(1)\n",
-    "    print(category)  # Output: \"celebrities\""
+    "# Split the summary into a list of sentences\n",
+    "sentences = nltk.sent_tokenize(summary)\n",
+    "\n",
+    "# Split the title into a list of words\n",
+    "title_words = title.split()\n",
+    "\n",
+    "# Iterate through the sentences and reword if necessary\n",
+    "reworded_sentences = []\n",
+    "for sentence in sentences:\n",
+    "    # Check for words from the title in the sentence\n",
+    "    for word in title_words:\n",
+    "        if word in sentence:\n",
+    "            # Reword the sentence to avoid using the word\n",
+    "            sentence = sentence.replace(word, \"<word>\")\n",
+    "    reworded_sentences.append(sentence)\n",
+    "\n",
+    "# Join the reworded sentences into a single string\n",
+    "reworded_summary = \" \".join(reworded_sentences)\n",
+    "print(reworded_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/grahamwaters/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import wordnet\n",
+    "nltk.download(\"wordnet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slogan 'this (slogan) this (slogan) this (slogan)' was used by the Conservative Party in the 2019 United Kingdom general election. It was intended to convey the party's commitment to taking the UK out of the European Union.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import wordnet\n",
+    "\n",
+    "deck = [{\n",
+    "        \"title\": \"Get Brexit Done\",\n",
+    "        \"summary\": [\n",
+    "            \"Get Brexit Done\",\n",
+    "            \"The slogan 'Get Brexit Done' was used by the Conservative Party in the 2019 United Kingdom general election. It was intended to convey the party's commitment to taking the UK out of the European Union.\"\n",
+    "        ],\n",
+    "        \"related\": 23\n",
+    "    }]\n",
+    "\n",
+    "card = deck[0]\n",
+    "title = card[\"title\"]\n",
+    "summary = card[\"summary\"][1]\n",
+    "\n",
+    "# Split the summary into a list of sentences\n",
+    "sentences = nltk.sent_tokenize(summary)\n",
+    "\n",
+    "# Split the title into a list of words\n",
+    "title_words = title.split()\n",
+    "\n",
+    "# Iterate through the sentences and reword if necessary\n",
+    "reworded_sentences = []\n",
+    "for sentence in sentences:\n",
+    "    # Check for words from the title in the sentence\n",
+    "    for word in title_words:\n",
+    "        if word in sentence:\n",
+    "            # Reword the sentence to avoid using the word\n",
+    "            sentence = sentence.replace(word, \"this (slogan)\")\n",
+    "    reworded_sentences.append(sentence)\n",
+    "\n",
+    "# Join the reworded sentences into a single string\n",
+    "reworded_summary = \" \".join(reworded_sentences)\n",
+    "print(reworded_summary)"
    ]
   }
  ],
