wikipedia_only: Updated

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2014,18 +2014,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': 'Thank God for Mississippi', 'summary': ['Thank God for Mississippi', 'Thank God for Mississippi is an adage used in the United States, particularly in the South, that is generally used when discussing rankings of U.S. states. Since the U.S. state of Mississippi commonly ranks at or near the bottom of such rankings, residents of other states also ranking near the bottom may say, Thank God for Mississippi, since the presence of that state in 50th place spares them the shame of being ranked last.Examples include rankings of educational achievement, business opportunities, obesity rates, overall health, the poverty rate, life expectancy, or other objective or subjective criteria of the quality of life or government in the 50 states. The phrase is in use even among state government officials and journalists, though occasionally with a slight twist.Mississippis poor reputation is such a common trope in American culture that when Mississippi does indeed rank well in something, the phrase Thank God for Mississippi may get brought up just to discuss how it does not apeopley in the given circumstance. The saying comes from Mississippis poor ranking as compared to the other 49 states, not from a global perspective.'], 'related': 18}\n"
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'generate_physical_cards'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_81002/1493924343.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;31m# to use the generate_physical_cards function, you must first run the card_generation_wrapper function like this:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0mcard_generation_wrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# this will clean the card deck and save it to a new file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m \u001b[0mcard_generation_wrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_physical_cards\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# this will generate the physical cards\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'generate_physical_cards'"
      ]
     }
    ],
    "source": [
+    "\n",
     "import textwrap\n",
     "import os\n",
     "from PIL import Image, ImageDraw, ImageFont\n",
@@ -2074,14 +2079,23 @@
     "    # save the image\n",
     "    image.save('./card_images/{}.png'.format(len(os.listdir('./card_images/'))))\n",
     "\n",
-    "#^ Example usage\n",
-    "card = random.choice(card_deck)\n",
-    "print(card)\n",
-    "summary = card['summary'][1] if isinstance(card['summary'], list) else card['summary']\n",
-    "# summarize the definition with the summarize function\n",
-    "summary = summarize_text(summary, 2) if isinstance(summary, str) else summary # if the summary is a list, then it's already been summarized\n",
-    "generate_card(str(card['title']), summary, points=get_google_trends_score(card['title']))\n",
-    "# generate_card('test title', 'test definition', 10)"
+    "def generate_physical_cards():\n",
+    "    #^ Example usage\n",
+    "    card = random.choice(card_deck)\n",
+    "    print(card)\n",
+    "    summary = card['summary'][1] if isinstance(card['summary'], list) else card['summary']\n",
+    "    # summarize the definition with the summarize function\n",
+    "    summary = summarize_text(summary, 2) if isinstance(summary, str) else summary # if the summary is a list, then it's already been summarized\n",
+    "    generate_card(str(card['title']), summary, points=get_google_trends_score(card['title']))\n",
+    "    # generate_card('test title', 'test definition', 10)\n",
+    "\n",
+    "    # iterate through each card and generate a card image, starting with the index of the last card image\n",
+    "    for card in tqdm(card_deck[len(os.listdir('./card_images/'))]):\n",
+    "        title = card['title']\n",
+    "        summary = card['summary'][1] if isinstance(card['summary'], list) else card['summary']\n",
+    "        # summarize the definition with the summarize function\n",
+    "        summary = summarize_text(summary, 2) if isinstance(summary, str) else summary # if the summary is a list, then it's already been summarized\n",
+    "        generate_card(str(card['title']), summary, points=get_google_trends_score(card['title']))\n"
    ]
   },
   {
